feat: Phase 1: 법적 필수 페이지 1.1 이용약관 페이지 - 경로: frontend/app/terms/page.tsx - 내용: 서비스 목적, 이용조건, 면책조항, 회원 의무
1.2 개인정보처리방침 페이지
- 경로: frontend/app/privacy/page.tsx
- 내용: 수집항목(이메일, 암호화된 비밀번호), 수집목적, 보유기간, 제3자 제공 여부, 이용자 권리

1.3 Footer 링크 연결
- 수정 파일: frontend/components/Footer.tsx

Phase 2: 찜하기/북마크 기능
회원 전용 기능
2.1 DB 스키마 추가
2.2 백엔드 API
2.3 프론트엔드 구현

3. AI 이미지 인식 UX 개선 및 Vision API 강화

  - price-guide 페이지 레이아웃 재구성
    - 이미지 업로드 섹션을 상단에 배치 (사진으로 빠른 입력)
    - "또는 직접 입력" 구분선으로 UX 개선
    - AI 인식 결과로 폼 자동 채우기

  - PriceForm 컴포넌트 리팩토링
    - ImageUpload 분리, initialValues/imageKeys props 추가
    - 외부에서 인식 결과 주입 가능하도록 변경

  - Google Cloud Vision 서비스 개선
    - WEB_DETECTION 추가 (웹에서 유사 이미지 검색)
    - 카테고리 키워드 확장 (Vision API 영문 라벨 대응)
    - 브랜드 기반 카테고리 추론 로직 추가
    - 날짜 패턴 필터링 (nov-2022 같은 오인식 방지)
    - 이미지 base64 다운로드 방식으로 안정성 향상

  - 환경 설정
    - .env.example에 GOOGLE_APPLICATION_CREDENTIALS 추가
    - .gitignore에 Google Cloud 인증 파일 패턴 추가

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ out/
 .env.production.local
 .env.example
 
+# Google Cloud credentials (절대 커밋 금지!)
+**/google-credentials.json
+**/gcp-*.json
+**/*-service-account.json
+
 # Logs
 *.log
 npm-debug.log*
