--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.940.0",
+    "@google-cloud/vision": "^5.3.4",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
