--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
