--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
