--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -12,52 +12,22 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/icons/apple-icon-180.png",
+      "sizes": "180x180",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     }
   ],
   "screenshots": [
@@ -81,15 +51,13 @@
       "name": "가격 추천",
       "short_name": "추천",
       "description": "중고 전자제품 가격 추천받기",
-      "url": "/price-guide",
-      "icons": [{ "src": "/icons/shortcut-price.png", "sizes": "96x96" }]
+      "url": "/price-guide"
     },
     {
       "name": "찜 목록",
       "short_name": "찜",
       "description": "저장한 찜 목록 보기",
-      "url": "/bookmarks",
-      "icons": [{ "src": "/icons/shortcut-bookmark.png", "sizes": "96x96" }]
+      "url": "/bookmarks"
     }
   ]
 }
