--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "중고 전자제품 가격 가이드 백엔드 서버",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "tsx watch src/app.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "cross-env NODE_ENV=production node dist/app.js",
     "test": "jest",
     "test:unit": "jest --testPathPattern=tests/unit",
     "test:int": "jest --testPathPattern=tests/integration",
@@ -49,14 +49,15 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node-cron": "^3.0.11",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
