feat: Phase 1 고도화 - 성능 최적화, 보안 강화, 상태 관리 개선
  ## 크롤링 성능 최적화
  - 브라우저 풀 싱글톤 패턴 적용 (browserPool.ts)
  - 타임아웃 30초 → 15초 단축
  - 가격 파싱 정규식 개선 (만원, 천원 등 다양한 형식 지원)

  ## 보안 강화
  - JWT Refresh Token 메커니즘 구현
  - Rate Limiting 적용 (로그인 5회/15분, 비밀번호 변경 3회/시간)
  - helmet 보안 헤더 미들웨어 추가
  - 토큰 블랙리스트 테이블 추가
  - /auth/refresh, /auth/logout, /auth/logout-all 엔드포인트 추가

  ## 프론트엔드 상태 관리
  - React Query 도입 (서버 상태 캐싱)
  - Zustand 도입 (UI 상태 관리)
  - 북마크, 히스토리, 알림 React Query 훅 추가
  - UI 스토어, Auth 스토어 추가

  ## 기타
  - Prisma 스키마에 RefreshToken, TokenBlacklist 모델 추가
  - dotenv-cli로 개발환경 env 파일 분리

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,11 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:generate": "dotenv -e .env.development -- prisma generate",
+    "db:migrate": "dotenv -e .env.development -- prisma migrate dev",
+    "db:push": "dotenv -e .env.development -- prisma db push",
+    "db:seed": "dotenv -e .env.development -- tsx prisma/seed.ts",
+    "db:studio": "dotenv -e .env.development -- prisma studio"
   },
   "keywords": [
     "pricecheck",
@@ -38,6 +38,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
@@ -49,6 +50,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "dotenv-cli": "^7.4.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
