--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.60.0",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.25",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
