--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "pricecheck-backend",
   "version": "1.0.0",
   "description": "중고 전자제품 가격 가이드 백엔드 서버",
+  "type": "module",
   "main": "dist/app.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch src/app.ts",
@@ -44,22 +45,27 @@
     "node-cron": "^3.0.3",
     "playwright": "^1.49.0",
     "sharp": "^0.33.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.18.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "dotenv-cli": "^7.4.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "cross-env": "^10.1.0",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^9.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
