--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "test": "jest",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "analyze": "set ANALYZE=true && next build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.60.0",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.25",
@@ -22,10 +24,13 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.67.0",
     "recharts": "^3.5.1",
+    "zod": "^4.1.13",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.6",
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
