--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.60.0",
     "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^4.5.7",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
