--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch src/app.ts",
     "build": "tsc",
-    "start": "cross-env NODE_ENV=production node dist/app.js",
+    "start": "prisma migrate deploy && cross-env NODE_ENV=production node dist/app.js",
     "test": "jest",
     "test:unit": "jest --testPathPattern=tests/unit",
     "test:int": "jest --testPathPattern=tests/integration",
