--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch src/app.ts",
     "build": "tsc",
+    "postinstall": "npx playwright install chromium --with-deps",
     "start": "prisma generate && cross-env NODE_ENV=production node dist/app.js",
     "test": "jest",
     "test:unit": "jest --testPathPattern=tests/unit",
